Some layout bug fixes

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -160,6 +160,7 @@ input {
 	color: #CCCCCC;
 }
 .post {
+	padding-top: 20px;
 	padding-bottom: 20px;
 	border-bottom: 1px solid #DDDDDD;
 }
